<resources>
    <string name="app_name">BenchmarkApplication</string>
    <string name="number_of_iterations">Number of iterations</string>
    <string name="fannkuch">Fannkuch</string>
    <string name="kotlin">kotlin</string>
    <string name="java">java</string>
    <string name="result">result</string>
    <string name="speed">Speed</string>
    <string name="memory">Memory</string>
    <string name="n_body">N-Body</string>
    <string name="fasta">fasta</string>
    <string name="reverse_complement">Reverse complement</string>
</resources>
